--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,18 +1,25 @@
-  ja:
-    enums:
-      order:
-        payment_method:
-          credit_card: "クレジットカード"
-          transfer: "銀行振込"
-        status:
-          awaiting_payment: "入金待ち"
-          payment_confirmation: "入金確認"
-          making: "製作中"
-          shipping_preparation: "発送準備中"
-          shipped: "発送済み"
-      order_detail:
-        making_status:
-          impossible: "着手不可"
-          waiting: "製作待ち"
-          making: "製作中"
-          completion: "製作完了"
+ja:
+  enums:
+    order:
+      payment_method:
+        credit_card: "クレジットカード"
+        transfer: "銀行振込"
+      status:
+        awaiting_payment: "入金待ち"
+        payment_confirmation: "入金確認"
+        making: "製作中"
+        shipping_preparation: "発送準備中"
+        shipped: "発送済み"
+    order_detail:
+      making_status:
+        impossible: "着手不可"
+        waiting: "製作待ち"
+        making: "製作中"
+        completion: "製作完了"
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
